# PubBus

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
examples/Benchmark/: Benchmark.cpp
examples/SFML/: CMakeLists.txt  Messages.hpp  SFML.cpp
examples/Simple/: CMakeLists.txt  Simple.cpp
include/PubBus/: Message.hpp  MessageBus.hpp  MessageContainer.hpp  MessageContainerBase.hpp  PubBus.hpp  SubscriberHandle.hpp
test/: CMakeLists.txt  MessageBusTest.cpp  MessageContainerTest.cpp  MessageTest.cpp  SubscriberHandleTest.cpp  TestMessage.cpp  TestMessageBus.cpp  TestMessageContainer.cpp  TestSubscriberHandle.cpp  catch.runsettings
